--- a/app/src/main/res/layout/note_add_alert_dialog.xml
+++ b/app/src/main/res/layout/note_add_alert_dialog.xml
@@ -60,6 +60,7 @@
                 android:inputType="text"
                 android:maxLines="1"
                 android:textColor="#FFFFFF"
+                android:textColorHighlight="#FFFFFF"
                 android:textColorHint="#FFFFFF" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -80,7 +81,7 @@
             app:boxCornerRadiusTopStart="12dp"
             app:boxStrokeColor="#FFFFFF"
             app:boxStrokeWidth="1dp"
-            app:hintTextColor="#80FFFFFF"
+            app:hintTextColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tilSubject">
