--- a/app/src/main/res/navigation/nav_grapth.xml
+++ b/app/src/main/res/navigation/nav_grapth.xml
@@ -9,12 +9,20 @@
         android:id="@+id/mainFragment"
         android:name="com.mahmutgunduz.togemi.ui.fragment.MainFragment"
         android:label="fragment_home_page"
-        tools:layout="@layout/fragment_main" />
+        tools:layout="@layout/fragment_main" >
+        <action
+            android:id="@+id/action_mainFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.mahmutgunduz.togemi.ui.fragment.DetailFragment"
         android:label="fragment_detail"
-        tools:layout="@layout/fragment_detail" />
+        tools:layout="@layout/fragment_detail" >
+        <action
+            android:id="@+id/action_detailFragment_to_mainFragment"
+            app:destination="@id/mainFragment" />
+    </fragment>
     <fragment
         android:id="@+id/toDoFragment"
         android:name="com.mahmutgunduz.togemi.ui.fragment.ThingsToDoFragment"
