--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,5 +7,5 @@
     <item
         android:id="@+id/toDoFragment"
         android:icon="@drawable/planning"
-        android:title="yapilacaklar" />
+        android:title="Yapılacaklar" />
 </menu>
