--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@color/darkBlue"
+    android:background="@color/darkBlue"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragment.MainFragment">
 
@@ -40,6 +42,9 @@
     <!-- Başlık -->
 
     <!-- RecyclerView - Görev Listesi -->
+
+    <!-- Boş Durum Mesajı -->
+
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="0dp"
@@ -50,7 +55,7 @@
         android:paddingTop="12dp"
         android:paddingEnd="24dp"
         android:text="Notlarım"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,10 +72,11 @@
         android:paddingBottom="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchInputLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/searchInputLayout"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <!-- Boş Durum Mesajı -->
     <TextView
         android:id="@+id/tvEmptyState"
         android:layout_width="wrap_content"
@@ -90,13 +96,14 @@
         android:id="@+id/fabAddTask"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:layout_margin="24dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="24dp"
         android:contentDescription="Yeni görev ekle"
         android:elevation="8dp"
         android:src="@drawable/add_white"
-        app:backgroundTint="@color/darkBlue"
+        app:backgroundTint="@color/blue"
         app:layout_constraintBottom_toBottomOf="parent"
+
+
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
