--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,15 +3,15 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="darkBlue">#213555</color>
-    <color name="blue">#3E5879</color>
-    <color name="darkCream">#D8C4B6</color>
-    <color name="cream">#F5EFE7</color>
+    <color name="darkBlue">#1E2A38</color>
+    <color name="blue">#3F51B5</color>
+    <color name="orange">#FF9800</color>
+    <color name="darkCream">#FFF8E1</color>
 
 
     <color name="renk1">#dabbfa</color>
     <color name="ana">#261f47</color>
-    <color name="renk2">#d7f8f2</color>
+    <color name="renk2">#FF5722</color>
 
 
     <color name="dialog_background">#1E2A38</color>
@@ -19,4 +19,13 @@
     <color name="text_primary">#FFFFFF</color>
     <color name="text_secondary">#80FFFFFF</color>
     <color name="accent_green">#4CAF50</color>
+    
+    <!-- File picker colors -->
+    <color name="ripple_material_light">#1F000000</color>
+    <color name="divider_color">#EEEEEE</color>
+    <color name="text_color_primary">#212121</color>
+    <color name="image_tint">#4CAF50</color>
+    <color name="video_tint">#F44336</color>
+    <color name="audio_tint">#2196F3</color>
+    <color name="document_tint">#FF9800</color>
 </resources>
