--- a/app/src/main/res/layout/fragment_things_to_do.xml
+++ b/app/src/main/res/layout/fragment_things_to_do.xml
@@ -31,7 +31,7 @@
         android:id="@+id/cardSearch"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         app:cardCornerRadius="12dp"
@@ -46,6 +46,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Not ara"
+            android:textColorHint="@color/black"
+            app:hintTextColor="@color/black"
             app:boxBackgroundColor="@color/white"
             app:boxBackgroundMode="filled"
             app:boxCornerRadiusBottomEnd="16dp"
