--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -44,23 +44,26 @@
 
                 <ImageView
                     android:id="@+id/ivPinned"
-                    android:layout_width="32dp"
+                    android:layout_width="27dp"
                     android:layout_height="32dp"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:padding="4dp"
-                    android:src="@drawable/ic_pin"
+
+
+                    android:alpha="1"
+                    android:src="@drawable/touch2"
                     android:contentDescription="Sabitle"
-                    app:tint="@color/white" />
+                     />
 
                 <ImageView
                     android:id="@+id/btnReminder"
-                    android:layout_width="32dp"
+                    android:layout_width="27dp"
                     android:layout_height="32dp"
                     android:layout_marginStart="16dp"
                     android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="Hatırlatıcı Ekle"
                     android:padding="4dp"
                     android:src="@drawable/ic_alarm"
-                    android:contentDescription="Hatırlatıcı Ekle"
                     app:tint="@color/white" />
 
                 <ImageView
